rust/examples/intro/formatting_required.rs
fn main() {
    let name = "Foo";
    // println!(name);   // error: format argument must be a string literal
    println!("{}", name);
}
